--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,31 +5,44 @@
             <div class="col-lg-4 mx-auto">
               <h2 class="text-center mb-4" style="color: white;">Ingresar</h2>
               <div class="auto-form-wrapper">
-                <form action="#">
+                <form autocomplete="off" [formGroup] = "loginForm" (ngSubmit)="loginUser()">
+
                   <div class="form-group">
-                    <label class="label">Usuario</label>
+                    <label class="label">Email</label>
                     <div class="input-group">
-                      <input type="email" class="form-control" placeholder="Email">
+                      <input  type="email" 
+                              class="form-control inputs" 
+                              formControlName="email"
+                              placeholder="Email">
                       <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="fa fa-check-circle"></i>
+                          <i *ngIf="loginForm.get('email').valid" 
+                            class="fa fa-check-circle"></i>
                         </span>
                       </div>
                     </div>
                   </div>
+                  
                   <div class="form-group">
                     <label class="label">Contraseña</label>
                     <div class="input-group">
-                      <input type="password" class="form-control" placeholder="*********">
+                      <input  type="password" 
+                              class="form-control inputs" 
+                              formControlName="password"
+                              placeholder="*********">
                       <div class="input-group-append">
                         <span class="input-group-text">
-                          <i class="fa fa-check-circle"></i>
+                          <i *ngIf="loginForm.get('password').valid"
+                            class="fa fa-check-circle"></i>
                         </span>
                       </div>
                     </div>
                   </div>
+
                   <div class="form-group">
-                    <button class="btn btn-primary submit-btn btn-block">Login</button>
+                    <button
+                      [disabled]="loginForm.invalid" 
+                      class="btn btn-primary submit-btn btn-block">Login</button>
                   </div>
                   
                   
@@ -45,6 +58,5 @@
             </div>
           </div>
         </div>
-        <!-- content-wrapper ends -->
       </div>
     
