--- a/src/app/auth/registern/registern.component.html
+++ b/src/app/auth/registern/registern.component.html
@@ -1,35 +1,72 @@
-
   <div class="page-body-wrapper full-page-wrapper auth-page">
     <div class="content-wrapper d-flex align-items-center auth register-bg-1 theme-one">
       <div class="row w-100">
         <div class="col-lg-4 mx-auto">
           <h2 class="text-center mb-4">Registro</h2>
           <div class="auto-form-wrapper">
-            <form action="#">
+
+            <form [formGroup]="registerfGroup" (ngSubmit)="createUser()">
+
               <div class="form-group">
                 <div class="input-group">
-                  <input type="email" class="form-control" placeholder="Correo">
+                  
+                  <input type="text"
+                          class="form-control inputs"
+                          formControlName="name"
+                          placeholder="Nombre">
+
                   <div class="input-group-append">
                     <span class="input-group-text">
-                      <i class="fa fa-check-circle"></i>
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="input-group">
-                  <input type="password" class="form-control" placeholder="Password">
-                  <div class="input-group-append">
-                    <span class="input-group-text">
-                      <i class="fa fa-check-circle"></i>
+                      <i
+                        *ngIf="registerfGroup.get('name').valid"
+                        class="fa fa-check-circle"></i>
                     </span>
                   </div>
                 </div>
               </div>
 
               <div class="form-group">
-                <button class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
+                <div class="input-group">
+                  
+                  <input type="email" 
+                          class="form-control inputs"
+                          formControlName="email"
+                          placeholder="Correo">
+
+                  <div class="input-group-append">
+                    <span class="input-group-text">
+                      <i
+                      *ngIf="registerfGroup.get('email').valid" 
+                      class="fa fa-check-circle"></i>
+                    </span>
+                  </div>
+                </div>
               </div>
+              
+              <div class="form-group">
+                <div class="input-group">
+                    <input type="password"
+                            class="form-control inputs"
+                            formControlName="password" 
+                            placeholder="Password">
+                  
+                    <div class="input-group-append">
+                    <span class="input-group-text">
+                      <i
+                        *ngIf="registerfGroup.get('password').valid"
+                        class="fa fa-check-circle"></i>
+                    </span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <button 
+                  type="submit"
+                  [disabled]="registerfGroup.invalid"
+                  class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
+              </div>
+
               <div class="text-block text-center my-3">
                 <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
                 <br>
