Create components of 'ingreso-egreso', details and register

--- a/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -15,11 +15,23 @@
               </thead>
 
               <tbody>
-                <tr>
-                  <td>Descripción</td>
-                  <td>Monto</td>
-                  <td>Tipo</td>
-                  <td>acciones</td>
+                <tr *ngFor="let item of ingresoEItems | ordenIngreso">
+                  <td>{{item.description  | titlecase}}</td>
+                  <td>{{item.monto | currency }}</td>
+                  <td [class.text-success] = "item.tipo==='ingreso'"
+                      [class.text-danger] = "item.tipo==='egreso'">
+                    {{item.tipo | titlecase }}
+                  </td>
+                  <td>
+                    <button
+                      type="button"
+                      class="btn btn-danger"
+                      (click)="deleteItem(item.uid)"
+                      >
+                      <i class="fa fa-trash"></i>
+                      Borrar
+                    </button>
+                  </td>
                 </tr>
               </tbody>
 
