--- a/src/app/shared/sidebarr/sidebarr.component.html
+++ b/src/app/shared/sidebarr/sidebarr.component.html
@@ -9,7 +9,7 @@
             </div>
             
             <div class="text-wrapper">
-              <p class="profile-name">Cristobal Colón</p>
+              <p class="profile-name">{{userdata?.name}}</p>
               <div>
                 <small class="designation text-muted">Gerente</small>
               </div>
