--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -41,8 +41,23 @@
 
                   <div class="form-group">
                     <button
+                      type="submit"
                       [disabled]="loginForm.invalid" 
-                      class="btn btn-primary submit-btn btn-block">Login</button>
+                      *ngIf="!cargando"
+                      class="btn btn-primary submit-btn btn-block">
+                        Login
+                    </button>
+                  </div>
+
+                  <div class="form-group">
+                    <button
+                    type="button"
+                      [disabled]="true" 
+                      *ngIf="cargando"
+                      class="btn btn-primary submit-btn btn-block">
+                        <i class="fa fa-spin fa-sync"></i>
+                         Espere ...
+                    </button>
                   </div>
                   
                   
