--- a/src/app/auth/registern/registern.component.html
+++ b/src/app/auth/registern/registern.component.html
@@ -63,8 +63,19 @@
               <div class="form-group">
                 <button 
                   type="submit"
+                  *ngIf="!cargando"
                   [disabled]="registerfGroup.invalid"
                   class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
+              </div>
+
+              <div class="form-group">
+                <button 
+                  type="button"
+                  *ngIf="cargando"
+                  [disabled]="true"
+                  class="btn btn-primary submit-btn btn-block">
+                    <i class="fa fa-spin fa-sync"></i> Espere ...
+                  </button>
               </div>
 
               <div class="text-block text-center my-3">
