--- a/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -7,12 +7,13 @@
               Especifique el monto y el tipo
             </p>
 
-            <!-- <form> -->
+            <form [formGroup]="ingresoForm" (ngSubmit)="saveIgreso()">
               
               <div class="form-group">
                 <label>Descripción</label>
                 <input type="text" 
                        class="form-control" 
+                       formControlName="description"
                        placeholder="Descripción"
                        name="descripcion">
               </div>
@@ -21,6 +22,7 @@
                   <label>Monto</label>
                   <input type="number" 
                          class="form-control" 
+                         formControlName="monto"
                          placeholder="Monto"
                          name="monto">
                     <p>
@@ -31,26 +33,24 @@
               <div class="form-group">
                   <label>Tipo</label>
                   <br>
-                  <button type="button" class="btn btn-primary btn-block">Ingreso</button>
-                  <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+                  <button *ngIf="tipo" (click)="tipo=!tipo" type="button" class="btn btn-primary btn-block">Ingreso</button>
+                  <button *ngIf="!tipo" (click)="tipo=!tipo" type="button" class="btn btn-warning btn-block">Egreso</button>
               </div>
 
               <hr>
-              <button type="button" class="btn btn-success mr-2">
-                <i class="fa fa-save"></i>
-                Agregar
-              </button>
-
-              <!-- 
-                <button disabled class="btn btn-success mr-2">
-                  <i class="fa fa-spin fa-sync"></i>
-                  Espere por favor...
-                </button> 
-              -->
+              <button type="submit"
+                [disabled]="ingresoForm.invalid || loading"
+               class="btn btn-success mr-2">
+                <i *ngIf="!loading" class="fa fa-save"></i>
+                <i *ngIf="loading" class="fa fa-spin fa-sync"></i>
+                <span *ngIf="!loading">Agregar</span>
+                <span *ngIf="loading">Guardando ...</span>
+            </button>
+             
               
               <button type="reset" class="btn btn-light">Cancelar</button>
 
-            <!-- </form> -->
+            </form>
           </div>
         </div>
       </div>
