--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <!--  class no diplay d-none -->
         <li class="nav-item d-sm-inline-block">
           <a class="nav-link" id="UserDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
-            <span class="profile-text">Hello, Richard V.Welsh !</span>
+            <span class="profile-text">Hello, {{userdata?.name}} !</span>
             <img class="img-xs rounded-circle" src="assets/images/faces/face1.jpg" alt="Profile image">
           </a>
         </li>
